# remora-investigator

./: .gitignore  .gitmodules  LICENSE  README.md  flake.nix  package-lock.json  package.json  svelte.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
brickpack-2023/: Makefile  README.md
brickpack-2023/.devcontainer/: Dockerfile
brickpack-2023/src/design-scaffold/: Cargo.toml
brickpack-2023/src/launcher/: Cargo.toml
brickpack-2023/src/web-server/: Cargo.toml
brickpack-2023/src/web-ui/: Cargo.toml
custom-firefox-themes/relax-green/: manifest.json
custom-firefox-themes/relax-red/: manifest.json
custom-firefox-themes/relax-white/: manifest.json
desktop-gui/src-tauri/: Cargo.toml  tauri.conf.json
desktop-gui/src/layout/main_content/left_side/: EventsPanel.svelte  NotesPanel.svelte
desktop-gui/src/lib/: Launcher.svelte
interceptor/: Cargo.toml
interceptor/src/: lib.rs
remora-investigator/: manifest.json
remora-manager/: README.md
remora-manager/src/application-endpoints/: Cargo.toml
remora-manager/src/application-models/: Cargo.toml
remora-manager/src/frontend/: Cargo.toml
remora-manager/src/launcher/: Cargo.toml
remora-manager/src/mvp-scaffold/: Cargo.toml
remora-manager/src/web-server/: Cargo.toml
src/: app.postcss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migration/src/: lib.rs  m20230612_195555_create_table_requests.rs  m20230613_214441_create_table_responses.rs
src-tauri/src/: main.rs
src-tauri/src/endpoints/: get_events.rs  launch_interceptor.rs  list_events.rs  mod.rs
src-tauri/src/entities/: mod.rs  prelude.rs  requests.rs
src-tauri/src/interceptor/: mod.rs
src-tauri/src/interceptor/events/: request_will_be_sent.rs  response_received.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/storage/remora_storage/: connection.rs  mod.rs
src/entities/: EventRequestEntity.ts
src/layout/bottom_panel/: AlertsTabContent.svelte  BottomPanel.svelte  Content.svelte  HistoryTabContent.svelte  LogBookTabContent.svelte  NotesTabContent.svelte  Tabs.ts
src/layout/bottom_panel/HistoryTabContent/Table/: Table.svelte
src/layout/bottom_panel/left_side/: LeftSide.svelte  Tabs.svelte
src/layout/bottom_panel/right_side/: RightSide.svelte
src/layout/main_content/EventsPanel/: EventsPanel.svelte
src/layout/main_content/EventsPanel/Table/: Table.svelte
src/layout/main_content/left_side/: EventsPanel.svelte  LeftSide.svelte  LeftSideToolbar.svelte
src/layout/main_content/left_side/NotesPanel/: NotesPanel.svelte  panelTypes.ts
src/layout/main_content/right_side/request_panel/: RequestToolbar.svelte
src/lib/: Configurator.svelte  Launcher.svelte  Refresher.svelte
src/lib/icons/svg/: RequestIdIcon.svelte
src/modals/: SettingsAppMdal.svelte
src/routes/: +layout.svelte
src/stores/: historyPanelContentStore.ts
tauri-gui/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts
tauri-gui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-gui/src-tauri/src/: main.rs
tauri-gui/src-tauri/src/interceptor/: mod.rs
tauri-gui/src/layout/main_content/: MainContent.svelte
tauri-gui/src/lib/: Hdivider.svelte  Launcher.svelte  Vdivider.svelte
tauri-gui/src/routes/: +page.svelte
web-debugger/: Cargo.toml
web-debugger/src/: main.rs
web-debugger/src/interceptor/: mod.rs
web-ui/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
web-ui/src/: app.postcss
web-ui/src-tauri/: Cargo.toml  tauri.conf.json
web-ui/src/layout/bottom_panel/: BottomPanel.svelte
web-ui/src/layout/main_content/: MainContent.svelte
web-ui/src/lib/: Greet.svelte  Launcher.svelte
(+40 files in other folders)
